# recet

./: README.md  db.surql  db.ts  demo_data.surql  eslint.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml  pwa-assets.config.ts
.github/instructions/: guidelines.instructions.md  vue.instructions.md
app/: app.config.ts  db.ts  global.d.ts
app/assets/: main.css  view-transitions.css
app/components/: cuisine-master-data-modal.vue  emoji-picker.vue  household-selector.vue  (+11 more)
components/: create-cuisine-modal.vue  create-ingredient-modal.vue  create-meal-modal.vue  create-tag-modal.vue  create-unit-modal.vue  cuisine-master-data-modal.vue  household-modal.vue  household-selector.vue  ingredient-category-master-data-modal.vue  ingredient-master-data-modal.vue  master-data-modal.vue  meal-master-data-modal.vue  page-layout.vue  recipe-card.vue  recipe-image.vue  shop-master-data-modal.vue  shopping-list-card.vue  shopping-list-modal.vue  tag-master-data-modal.vue  unit-master-data-modal.vue
composables/: auth.ts  db.ts  households.ts  recipe.ts  utils.ts
layouts/: app.vue
middleware/: auth.ts  db.global.ts  household.ts
migrations/: 2026-02-09-public-recipes.surql  2026-02-28-removed-user-access.surql  2026-02-28-separate-shopping-list-items.surql  2026-03-02-recipe-subrecipes.surql  migrate-to-v3.surql  shopping-list-items.surql
pages/: create-first-household.vue  index.vue  masterData.vue  members.vue  settings.vue
surreal-plugin/: .gitignore  Cargo.toml  build.sh  recet.surli  surrealism.toml
surreal-plugin/src/: image.rs  lib.rs  recipe_scraper.rs
(+85 files in other folders)
