[package]
name = "surreal-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
image = "0.25.8"
surrealism = "0.1.8"
surrealdb-types = "=3.0.0-beta.3"
blurhash = "0.2.3"
anyhow = "1.0.100"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = [ "derive" ] }
html2text = "0.16.5"
