[package]
name = "surreal-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
image = "0.25.9"
surrealism = { git = "https://github.com/horvbalint/surrealdb" }
surrealdb-types = { git = "https://github.com/horvbalint/surrealdb" }
blurhash = "0.2.3"
anyhow = "1.0.102"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = [ "derive" ] }
html2text = "0.16.5"
